# bestASR

./: .gitignore  CHANGELOG.md  CLAUDE.md  Package.resolved  Package.swift  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/.idd/: local.json  routing-stats.jsonl  tree-lock
.github/workflows/: ci.yml
Sources/BestASRGUICore/: GUIOptions.swift  TranscribeSession.swift
Sources/BestASRKit/: CommandCore.swift
Sources/BestASRMCPCore/: JobRegistry.swift  Server.swift
Sources/bestasr/: BestASRCommand.swift  SharingCommands.swift
Sources/bestasr-gui/: BestASRApp.swift  ContentView.swift
Sources/bestasr-mcp/: main.swift
Tests/BestASRKitTests/: AudioNormalizerTests.swift  BackendEngineTests.swift  BenchmarkStoreTests.swift  BenchmarkTests.swift  BundleAssemblyTests.swift  CLITests.swift  ChineseEnginesTests.swift  ChineseFamilyWindowingTests.swift  ContextTests.swift  CorpusLicenseTests.swift  CorpusManifestTests.swift  CorpusRowContributionTests.swift  CreateOnceStoreTests.swift  CrossFamilyDispatchTests.swift  DataModelTests.swift  (+25 more)
benchmarks/: baseline-meta.json  baseline.json
bestasr/: __init__.py  cli.py
changelog/: 20260710_v0.12.0-async-gui-watchdog.md  20260716_hallucination-phase23.md  20260717_v0.14.0-release.md
docs/: design-brief.md
references/: asr-benchmark-landscape.md
scripts/: fetch-corpora.sh  install.sh  pin-reference-model.sh  pin-weights.sh  regression-gate.sh  release-app.sh  release-mcp.sh  release.sh  validate-diarization.sh
tests/: conftest.py  test_audio_detection.py  test_dataclasses.py  test_router.py
(+276 files in other folders)
